--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "5.3",
     "react-scripts": "5.0.1",
     "sass": "^1.52.3",
+    "socket.io-client": "^4.5.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
