modified stylings and change .env file

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_SERVER_URL = https://litechat-server.herokuapp.com/
+REACT_APP_SERVER_URL = https://litechat-server.herokuapp.com
 REACT_APP_ROOM_URL = https://litechat-server.herokuapp.com/room
 REACT_APP_POKE_API = https://pokeapi.co/api/v2/pokemon
 
