--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,8 +16,10 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "5.3",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
     "sass": "^1.52.3",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.5.1",
